# woodland_stockfish

./: .env.example  ARCHIVED.md  Dockerfile  README.md  pyproject.toml  railway.toml  start_workers.py  t1-512x15x8h-distilled-swa-3395000.html
stockfish_pipeline/ingest/: job_submitter.py
stockfish_pipeline/services/: stockfish_service.py
stockfish_pipeline/storage/: models.py
tests/: conftest.py  test_enqueue_analysis.py  test_sync_service.py
woodland_pipeline/: config.py
woodland_pipeline/ingest/: analysis_worker.py  lc0_analysis_worker.py  run_analysis_worker.py  run_lc0_worker.py  sync_service.py
woodland_pipeline/services/: lc0_service.py  stockfish_service.py
woodland_pipeline/storage/: database.py  models.py
